changed resume pop-up

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                                 <h3 class="text-white font-semibold">Resume in Progress!</h3>
                             </div>
                             <div class="px-3 py-2">
-                                <p>Hello, I don't have a proper one yet but you'll see it in the future!</p>
+                                <p>I don't have a proper one yet but you'll see it in the future!</p>
                             </div>
                             <div data-popper-arrow></div>
                             </div>
