--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                             </div>
 
 
-                            <a href="https://github.com/ddalki1205" target="_blank" rel="noopener noreferrer" class="text-gray-400 hover:text-white">
+                            <a href="https://github.com/iya5" target="_blank" rel="noopener noreferrer" class="text-gray-400 hover:text-white">
                                 
                                 <img src="assets/images/icons/github-icon.svg" alt="GitHub Icon" class="opacity-70 h-6 mr-2 hover:opacity-100 invert duration-150">
                             </a>
@@ -92,14 +92,14 @@
                             <!-- Languages -->
                             <div class="mb-4">
                                 <div class="flex flex-wrap">
-                                    <span class="inline-block bg-yellow-600 bg-opacity-30 px-3 py-1.5 text-xs font-medium text-yellow-400 mr-2 mb-2 rounded-full">Javascript</span>
-                                    <span class="inline-block bg-yellow-600 bg-opacity-30 px-3 py-1.5 text-xs font-medium text-yellow-400 mr-2 mb-2 rounded-full">Python</span>
-                                    <span class="inline-block bg-violet-600 bg-opacity-30 px-3 py-1.5 text-xs font-medium text-violet-400 mr-2 mb-2 rounded-full">PHP</span>
-                                    <span class="inline-block bg-blue-600 bg-opacity-30 px-3 py-1.5 text-xs font-medium text-blue-400 mr-2 mb-2 rounded-full">MariaDB</span>
-                                    <span class="inline-block bg-rose-600 bg-opacity-30 px-3 py-1.5 text-xs font-medium text-rose-400 mr-2 mb-2 rounded-full">Apache Web Server</span>
-                                    <span class="inline-block bg-amber-600 bg-opacity-30 px-3 py-1.5 text-xs font-medium text-amber-400 mr-2 mb-2 rounded-full">SQL</span>
-                                    <span class="inline-block bg-orange-600 bg-opacity-30 px-3 py-1.5 text-xs font-medium text-orange-400 mr-2 mb-2 rounded-full">Git</span>
-                                    <span class="inline-block bg-cyan-600 bg-opacity-30 px-3 py-1.5 text-xs font-medium text-cyan-400 mr-2 mb-2 rounded-full">Tailwind</span>
+                                    <span class="inline-block bg-yellow-600 bg-opacity-30 px-3 py-2 text-xs font-medium text-yellow-300 mr-2 mb-2 rounded-full">Javascript</span>
+                                    <span class="inline-block bg-blue-600 bg-opacity-30 px-3 py-2 text-xs font-medium text-blue-300 mr-2 mb-2 rounded-full">Python</span>
+                                    <span class="inline-block bg-purple-600 bg-opacity-30 px-3 py-2 text-xs font-medium text-pink-300 mr-2 mb-2 rounded-full">PHP</span>
+                                    <span class="inline-block bg-amber-800 bg-opacity-30 px-3 py-2 text-xs font-medium text-amber-600 mr-2 mb-2 rounded-full">MariaDB</span>
+                                    <span class="inline-block bg-rose-600 bg-opacity-30 px-3 py-2 text-xs font-medium text-pink-100 mr-2 mb-2 rounded-full">Apache Web Server</span>
+                                    <span class="inline-block bg-amber-600 bg-opacity-30 px-3 py-2 text-xs font-medium text-orange-200 mr-2 mb-2 rounded-full">SQL</span>
+                                    <span class="inline-block bg-orange-600 bg-opacity-30 px-3 py-2 text-xs font-medium text-orange-200 mr-2 mb-2 rounded-full">Git</span>
+                                    <span class="inline-block bg-cyan-600 bg-opacity-30 px-3 py-2 text-xs font-medium text-cyan-200 mr-2 mb-2 rounded-full">Tailwind</span>
                                 </div>
                             </div>
                         </section>
@@ -142,7 +142,7 @@
                                             </div>
                                             <div class="flex space-x-4 mt-4">
                                                 <a class="flex items-center text-gray-300 hover:text-white transition-colors duration-300" 
-                                                   href="https://github.com/ddalki1205/registration_system" target="_blank" rel="noopener noreferrer">
+                                                   href="https://github.com/iya5/registration_system" target="_blank" rel="noopener noreferrer">
                                                    <img src="assets/images/icons/github-icon.svg" alt="GitHub Icon" class="w-6 h-6 mr-2 invert">
                                                    <span>View Code</span>
                                                 </a>
@@ -183,7 +183,7 @@
                                             </div>
                                             <div class="flex space-x-4 mt-4">
                                                 <a class="flex items-center text-gray-300 hover:text-white transition-colors duration-300" 
-                                                   href="https://github.com/ddalki1205/cruz" target="_blank" rel="noopener noreferrer">
+                                                   href="https://github.com/iya5" target="_blank" rel="noopener noreferrer">
                                                    <img src="assets/images/icons/github-icon.svg" alt="GitHub Icon" class="w-6 h-6 mr-2 invert">
                                                    <span>View Code</span>
                                                 </a>
