--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                                 role="tooltip"
                                 class="absolute z-10 invisible opacity-0 inline-block w-64 text-sm text-white bg-black rounded-lg shadow-xs border border-red-600 transition-opacity duration-300"
                             >
-                            <div class="px-3 py-2 bg-red-500 border border-red-700 rounded-t-lg">
+                            <div class="px-3 py-2 bg-red-800 border-b border-red-600 rounded-t-lg">
                                 <h3 class="text-white font-semibold">Resume in Progress!</h3>
                             </div>
                             <div class="px-3 py-2">
@@ -95,8 +95,8 @@
                                     <span class="inline-block bg-yellow-600 bg-opacity-30 px-3 py-2 text-xs font-medium text-yellow-300 mr-2 mb-2 rounded-full">Javascript</span>
                                     <span class="inline-block bg-blue-600 bg-opacity-30 px-3 py-2 text-xs font-medium text-blue-300 mr-2 mb-2 rounded-full">Python</span>
                                     <span class="inline-block bg-purple-600 bg-opacity-30 px-3 py-2 text-xs font-medium text-pink-300 mr-2 mb-2 rounded-full">PHP</span>
-                                    <span class="inline-block bg-amber-800 bg-opacity-30 px-3 py-2 text-xs font-medium text-amber-600 mr-2 mb-2 rounded-full">MariaDB</span>
-                                    <span class="inline-block bg-rose-600 bg-opacity-30 px-3 py-2 text-xs font-medium text-pink-100 mr-2 mb-2 rounded-full">Apache Web Server</span>
+                                    <span class="inline-block bg-amber-800 bg-opacity-30 px-3 py-2 text-xs font-medium text-amber-300 mr-2 mb-2 rounded-full">MariaDB</span>
+                                    <span class="inline-block bg-rose-600 bg-opacity-30 px-3 py-2 text-xs font-medium text-pink-200 mr-2 mb-2 rounded-full">Apache Web Server</span>
                                     <span class="inline-block bg-amber-600 bg-opacity-30 px-3 py-2 text-xs font-medium text-orange-200 mr-2 mb-2 rounded-full">SQL</span>
                                     <span class="inline-block bg-orange-600 bg-opacity-30 px-3 py-2 text-xs font-medium text-orange-200 mr-2 mb-2 rounded-full">Git</span>
                                     <span class="inline-block bg-cyan-600 bg-opacity-30 px-3 py-2 text-xs font-medium text-cyan-200 mr-2 mb-2 rounded-full">Tailwind</span>
@@ -137,8 +137,8 @@
                                                 </li>
                                             </ul>
                                             <div class="flex flex-wrap">
-                                                <span class="inline-block bg-yellow-600 bg-opacity-30 px-3 py-1.5 text-xs font-medium text-yellow-400 mr-2 mb-2 rounded-full">Python</span>
-                                                <span class="inline-block bg-amber-600 bg-opacity-30 px-3 py-1.5 text-xs font-medium text-amber-400 mr-2 mb-2 rounded-full">CTkinter</span>
+                                                <span class="inline-block bg-blue-500 bg-opacity-30 px-3 py-2 text-xs font-medium text-blue-300 mr-2 mb-2 rounded-full">Python</span>
+                                                <span class="inline-block bg-cyan-600 bg-opacity-30 px-3 py-2 text-xs font-medium text-cyan-300 mr-2 mb-2 rounded-full">CTkinter</span>
                                             </div>
                                             <div class="flex space-x-4 mt-4">
                                                 <a class="flex items-center text-gray-300 hover:text-white transition-colors duration-300" 
@@ -177,9 +177,9 @@
                                                 </li>
                                             </ul>
                                             <div class="flex flex-wrap">
-                                                <span class="inline-block bg-violet-600 bg-opacity-30 px-3 py-1.5 text-xs font-medium text-violet-400 mr-2 mb-2 rounded-full">PHP</span>
-                                                <span class="inline-block bg-blue-600 bg-opacity-30 px-3 py-1.5 text-xs font-medium text-blue-400 mr-2 mb-2 rounded-full">MariaDB</span>
-                                                <span class="inline-block bg-rose-600 bg-opacity-30 px-3 py-1.5 text-xs font-medium text-rose-400 mr-2 mb-2 rounded-full">Apache Web Server</span>
+                                                <span class="inline-block bg-purple-600 bg-opacity-30 px-3 py-2 text-xs font-medium text-pink-300 mr-2 mb-2 rounded-full">PHP</span>
+                                                <span class="inline-block bg-amber-800 bg-opacity-30 px-3 py-2 text-xs font-medium text-amber-400 mr-2 mb-2 rounded-full">MariaDB</span>
+                                                <span class="inline-block bg-rose-600 bg-opacity-30 px-3 py-2 text-xs font-medium text-pink-100 mr-2 mb-2 rounded-full">Apache Web Server</span>
                                             </div>
                                             <div class="flex space-x-4 mt-4">
                                                 <a class="flex items-center text-gray-300 hover:text-white transition-colors duration-300" 
